# generic-exporter-operator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS
.github/workflows/: release.yaml
src/: charm.py  config.py  snap_manager.py  snap_singleton.py  ssdlc.py  utils.py
tests/integration/: conftest.py  helpers.py  test_alerts.py  test_charm.py  test_cos_relation.py  test_scaling.py
tests/unit/: tes_ssdlc.py  test_charm.py  test_helpers.py  test_snap_manager.py  test_snap_singleton.py
